[package]
name = "awesome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.1.0"
actix-protobuf = "^0.8.0"
env_logger = "^0.9.0"
log = "^0.4.17"
prost = "^0.10.0"
prost-derive = "^0.11.0"